<resources>
    <string name="app_name">Drawing</string>
    <string name="action_settings">Settings</string>
    <string name="goButt">GO!</string>
    <string name="prevButt">Prev</string>
    <string name="nextButt">Next</string>
    <string name="test"></string>
    <string name="time">9</string>
    <string name="title_activity_scores_and_stats">ScoresAndStats</string>
    <string name="scoreText">Score:</string>
    <string name="timeScore">Time</string>
    <string name="numberScore">Number Wrong</string>
    <string name="percentScore">Percent Correct</string>
    <string name="startButt">Start</string>
    <string name="scoreLaunch">Scores</string>
    <string name="title_activity_game_mode">GameMode</string>
    <string name="halfMMode">Half Marathon</string>
    <string name="marathonMode">Marathon</string>
    <string name="normallButton">Normal</string>
    <string name="gameModeText">Choose a Game Length:</string>
    <string name="title_activity_general_mode">GeneralMode</string>
    <string name="title_activity_expanded_main">ExpandedMainActivity</string>
    <string name="title_activity_sandwich_main">SandwichMainActivity</string>
    <string name="title_activity_expanded_screen">ExpandedScreen</string>
    <string name="title_activity_sandcwich_screen">SandcwichScreen</string>
    <string name="nextButtLeft">Next</string>
    <string name="prevButtRight">Prev</string>
    <string name="nextButtRight">Next</string>
    <string name="scoreButt">Scores</string>
    <string name="title_activity_general_mode_description">generalModeDescription</string>
    <string name="prevButtLeft">Prev</string>
</resources>
