<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.timapps.drawing.SandcwichScreen"
    tools:showIn="@layout/activity_sandcwich_screen"
    android:clickable="false">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/leftColor"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:background="#8e8e8e"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/rightColor"
        android:layout_alignTop="@+id/leftColor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:background="#8e8e8e"/>

    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/nextButtLeft"
        android:id="@+id/nextButtLeft"
        android:layout_alignTop="@+id/nextButtRight"
        android:layout_toLeftOf="@+id/goButt"
        android:layout_toStartOf="@+id/goButt"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/prevButtRight"
        android:id="@+id/prevButtRight"
        android:layout_below="@+id/rightColor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="18dp"/>

    <Button
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/nextButtRight"
        android:id="@+id/nextButtRight"
        android:layout_alignTop="@+id/prevButtRight"
        android:layout_toLeftOf="@+id/prevButtRight"
        android:layout_toStartOf="@+id/prevButtRight"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/colorToMatch"
        android:background="#8e8e8e"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreButt"
        android:id="@+id/scoreButt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#5460cc"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButt"
        android:id="@+id/startButt"
        android:layout_above="@+id/scoreButt"
        android:layout_centerHorizontal="true"
        android:background="#2cfd03"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goButt"
        android:id="@+id/goButt"
        android:layout_above="@+id/startButt"
        android:layout_centerHorizontal="true"
        android:background="#24ecd8"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/timeText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/nextButtRight"
        android:layout_toEndOf="@+id/nextButtRight"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevButtLeft"
        android:id="@+id/prevButtLeft"
        android:layout_alignBottom="@+id/nextButtLeft"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/sandwichCounter"
        android:layout_above="@+id/leftColor"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="Text"/>

</RelativeLayout>
