<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.timapps.drawing.GameMode"
    tools:showIn="@layout/activity_game_mode">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normallButton"
        android:id="@+id/normalButton"
        android:layout_marginTop="199dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:background="#f4aaaa"
        android:textColor="#ff0000"
        android:gravity="center"
        android:onClick="launchMainNormal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marathonMode"
        android:id="@+id/marathonMode"
        android:layout_alignTop="@+id/normalButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:background="#f4aaaa"
        android:textColor="#ff0000"
        android:gravity="center"
        android:onClick="launchMainMarathon"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/halfMMode"
        android:id="@+id/halfMMode"
        android:textColor="#ff0000"
        android:background="#f4aaaa"
        android:layout_marginTop="81dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/normalButton"
        android:layout_centerHorizontal="true"
        android:onClick="launchMainHalfMarathon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gameModeText"
        android:id="@+id/gameModeText"
        android:layout_marginTop="75dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0000"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/skyObject"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
